tmp/package-random_sane/build-test_random/log
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -S/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source -B/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived --check-build-system CMakeFiles/Makefile.cmake 0
/usr/bin/gmake  -f CMakeFiles/Makefile2 test_random
gmake[1]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -S/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source -B/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived --check-build-system CMakeFiles/Makefile.cmake 0
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_progress_start /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived/CMakeFiles 4
/usr/bin/gmake  -f CMakeFiles/Makefile2 CMakeFiles/test_random.dir/all
gmake[2]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
/usr/bin/gmake  -f CMakeFiles/ra.dir/build.make CMakeFiles/ra.dir/depend
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
cd /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived && /home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_depends "Unix Makefiles" /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived/CMakeFiles/ra.dir/DependInfo.cmake --color=
Scanning dependencies of target ra
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
/usr/bin/gmake  -f CMakeFiles/ra.dir/build.make CMakeFiles/ra.dir/build
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
[ 25%] Building CXX object CMakeFiles/ra.dir/lib/random.cpp.o
/home/frodo/public/ugls_lab-4.0.70/bin/c++   -I/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/include  -pedantic-errors -std=gnu++17 -o CMakeFiles/ra.dir/lib/random.cpp.o -c /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/lib/random.cpp
[ 50%] Linking CXX static library libra.a
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -P CMakeFiles/ra.dir/cmake_clean_target.cmake
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_link_script CMakeFiles/ra.dir/link.txt --verbose=1
/usr/bin/ar qc libra.a  CMakeFiles/ra.dir/lib/random.cpp.o
/usr/bin/ranlib libra.a
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
[ 50%] Built target ra
/usr/bin/gmake  -f CMakeFiles/test_random.dir/build.make CMakeFiles/test_random.dir/depend
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
cd /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived && /home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_depends "Unix Makefiles" /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived/CMakeFiles/test_random.dir/DependInfo.cmake --color=
Scanning dependencies of target test_random
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
/usr/bin/gmake  -f CMakeFiles/test_random.dir/build.make CMakeFiles/test_random.dir/build
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
[ 75%] Building CXX object CMakeFiles/test_random.dir/app/test_random.cpp.o
/home/frodo/public/ugls_lab-4.0.70/bin/c++   -I/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/include  -pedantic-errors -std=gnu++17 -o CMakeFiles/test_random.dir/app/test_random.cpp.o -c /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp: In function ‘int main()’:
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp:18:8: error: passing ‘const lcg’ {aka ‘const ra::random::linear_congruential_generator’} as ‘this’ argument discards qualifiers [-fpermissive]
   18 |  cg == cg;
      |        ^~
In file included from /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp:2:
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/include/ra/random.hpp:32:8: note:   in call to ‘bool ra::random::linear_congruential_generator::operator==(const ra::random::linear_congruential_generator&)’
   32 |   bool operator==(const linear_congruential_generator& obj){
      |        ^~~~~~~~
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp:19:8: error: passing ‘const lcg’ {aka ‘const ra::random::linear_congruential_generator’} as ‘this’ argument discards qualifiers [-fpermissive]
   19 |  cg != cg;
      |        ^~
In file included from /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/app/test_random.cpp:2:
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/source/include/ra/random.hpp:37:8: note:   in call to ‘bool ra::random::linear_congruential_generator::operator!=(const ra::random::linear_congruential_generator&)’
   37 |   bool operator!=(const linear_congruential_generator& obj){
      |        ^~~~~~~~
gmake[3]: *** [CMakeFiles/test_random.dir/app/test_random.cpp.o] Error 1
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
gmake[2]: *** [CMakeFiles/test_random.dir/all] Error 2
gmake[2]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
gmake[1]: *** [CMakeFiles/test_random.dir/rule] Error 2
gmake[1]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_1/cpp_basics-JudeOnyia/tmp/package-random_sane/derived'
gmake: *** [test_random] Error 2
ERROR: build failed to generate executable test_random
